[package]
name = "sbi-spec"
description = "A patched version of the original sbi-spec to support RuxOS"
version = "0.0.7"
authors = ["YdrMaster <ydrml@hotmail.com>", "Luo Jia <me@luojia.cc>"]
documentation = "https://docs.rs/sbi-spec"
edition = "2021"
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL2"
repository = "https://github.com/Sssssaltyfish/rustsbi"
readme = "README.md"
keywords = ["riscv", "sbi", "rustsbi"]
categories = ["os", "embedded", "hardware-support", "no-std"]

[dev-dependencies]
static_assertions = "1.1.0"

[features]
default = []
# Support for the legacy extension; this feature is not included by default.
legacy = []
